small fix to icon spacing

--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -101,6 +101,7 @@
 		max-width: 275px;
 		width: 100%;
 		margin: 30px auto;
+		padding: 0;
 		li {
 			width: 40px;
 			margin: 12px;
