--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1388,6 +1388,7 @@ ul {
     max-width: 275px;
     width: 100%;
     margin: 30px auto;
+    padding: 0;
   }
   .toolkit-icon-container li {
     width: 40px;
